2009-02-03  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/totem-python-module.c (totem_python_module_load):
	Ensure Python's initialised before loading any Python modules.
	Makes Totem more robust in the case of bug #570087.

============ Version 2.25.90

2009-02-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.90

2009-02-03  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screensaver/totem-screensaver.c (got_metadata_cb),
	(impl_activate), (impl_deactivate): Also update the screensaver
	status when we get more metadata from the backend, as it's possible
	we don't detect there's a video stream when playing starts
	(Closes: #562847)

2009-01-29  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* src/plugins/opensubtitles/opensubtitles.py:
	Make unsensitive the treeview when you download a subtitle.
	Fixes bug #569643.

2009-01-28  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add video/x-ms-asx as a supported
	mime-type, as used on http://www.oireachtas.ie (Closes: #569483)

2009-01-23  Brian Cameron  <brian.cameron@sun.com>

	* src/eggfileformatchooser.c:  Use G_STRFUNC instead of __FUNCTION__
	so code compiles with non-gcc compilers.  Fixes bug #568511.

2009-01-22  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-session.c (totem_session_restore): Add a check for
	filenames != NULL to totem_session_restore. (Closes: #443605)

2009-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_add_one_mrl):
	Don't ever use empty titles as the display name

	* src/plugins/coherence_upnp/coherence_upnp.py: Add a shadow
	around the treeview and use add_to_playlist_and_play
	for the double-click

2009-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: Fix retval

2009-01-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/coherence_upnp/Makefile.am:
	* src/plugins/coherence_upnp/coherence_upnp.py: