@@ -1,3 +1,9 @@
+2009-02-04  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c (on_eos_event): Patch from Maxim Ermilov
+	<zaspire@rambler.ru> to make looping through a single file
+	with repeat enabled a little smoother (Closes: #478714)
+
 2009-02-03  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/totem-python-module.c (totem_python_module_load):
